Fixed Login View

--- a/Frontend/havenly-frontend/src/assets/css/main.scss
+++ b/Frontend/havenly-frontend/src/assets/css/main.scss
@@ -3535,6 +3535,7 @@ body {
   width: 100px;
   color: #fff;
   border-radius: 6px;
+  padding: 10px 15px;
   background-color: #e86f52 !important;
   transition: 0.3s;
 }
@@ -3547,6 +3548,7 @@ body {
   width: 100px;
   color: #fff;
   border-radius: 6px;
+  padding: 10px 15px;
   background-color: #03c126 !important;
   transition: 0.3s;
 }
