--- a/Frontend/havenly-frontend/src/assets/css/main.scss
+++ b/Frontend/havenly-frontend/src/assets/css/main.scss
@@ -4896,10 +4896,10 @@ body {
         padding: 8px 12px;
         box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.3);
 
-        .v-select {
-          display: block;
-          z-index: 1;
-        }
+        // .v-select {
+        //   display: block;
+        //   z-index: 1;
+        // }
       }
     }
 
